--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.header {
+.header-1 {
   display: flex;
+  flex: 1;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
   padding: 0 2rem;
-  height: 188px;
+  height: 8rem;
   position: relative;
   top: 32px;
 }
 
+.hamburger{
+  display: none;
+}
+
 .logo-text{
   font-family: monospace;
-  font-size: 36px;
+  font-size: 2em;
   font-weight: 800;
   line-height: 43.57px;
   letter-spacing: 1px;
   text-align: left;
+  position: relative;
+  top: -10px;
 }
 
 .header-icons{
@@ -29,19 +32,266 @@
 
 .header-icons p{
   font-family: monospace;
-  font-size: 16px;
+  flex: 1;
+  font-size: 1em;
   font-weight: 700;
   line-height: 19.2px;
   letter-spacing: 1px;
   text-align: left;
 }
 
-.arrow-down {
-  border: solid black;
-  border-width: 0 3px 3px 0;
+.arrow {
+  border: solid #888792;
+  border-width: 0 1px 1px 0;
   display: inline-block;
   padding: 3px;
+  margin-right: 5px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
 
+.header-2{
+  font-family: monospace;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 1px;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.header-2 p:nth-child(1){
+  display: none;
+}
+
+.header-2 p:nth-child(2){
+  display: none;
+}
+
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.header-description{
+  font-family: monospace;
+  font-size: 1rem;
+  max-width: 40rem;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+.items-and-filter{
+  font-family: monospace;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 4rem;
+  padding: 0 2rem;
+  border: 1px solid #E5E5E5;
+  margin: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  gap: 5rem;
+}
+
+.filter-dropdown{
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.filter-dropdown p:first-child{
+  display: none;
+}
+
+select{
+  border:0px;
+  outline:0px;
+}
+
+option{
+  border: none;
+}
+
+.container{
+  display: flex;
+  width: 95%;
+  min-height: 20rem;
+  gap: 0.3rem;
+  margin: auto;
+}
+
+.sidebar{
+  min-width: 300px;
+  transition: width 0.3s ease;
+}
+
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 0.3rem;
+  color: white;
+  padding: 20px;
+  transition: flex-grow 0.3s ease;
+}
+
+.card{
+  width: 300px;
+  margin-bottom: 0.4rem;
+  background-color: white;
+  color: black;
+  border-radius: 1%;
+}
+
+.card img{
+  border-radius: 1%;
+}
+
+.card h3{
+  font-family: monospace;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-left: 0.2rem;
+}
+
+.card div{
+  margin-left: 0.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.card p{
+  color: #888792;
+  margin-top: 0.1rem;
+}
+
+.like{
+  width: 1rem;
+  height: auto;
+}
+
+.footer{
+  background-color: black;
+  color: white;
+  font-family: monospace;
+}
+
+@media (max-width: 768px) {
+  .sidebar{
+    min-width: 250px;
+  }
+}
+
+
+@media (max-width: 640px) {
+  .header-1{
+    padding: 0 1rem;
+    height: 5rem;
+  }
+
+  .logo-text{
+    font-size: 1.5em;
+  }
+
+  .header-icons{
+    width: Hug (84px)px;
+    height: Hug (20px)px;
+    top: 41px;
+    left: 275px;
+    gap: 12px;
+  }
+
+  .profile, .header-icons p{
+    display: none;
+  }
+
+  .hamburger{
+    display: inline;
+  }
+
+  .header-2{
+    justify-content: flex-start;
+    padding: 1rem;
+    gap: 0.2rem;
+  }
+
+  .header-2 p{
+    display: none;
+    font-size: 0.7em;
+  }
+
+  .header-2 p:nth-child(1){
+    color: #BFC8CD;
+    display: inline;
+  }
+
+  .header-2 p:nth-child(2){
+    color: #BFC8CD;
+    display: inline;
+  }
+
+  .header-2 p:nth-child(3){
+    display: inline;
+  }
+
+  h1 {
+    font-size: 18px;
+    margin-top: 0rem;
+  }
+
+  .header-description{
+    display: none;
+  }
+
+  .total-items{
+    display: none;
+  }
+
+  .items-and-filter{
+    margin: 0;
+  }
+
+  .filter-dropdown{
+    display: flex;
+    width: 100%;
+  }
+
+  .filter-dropdown p:first-child{
+    display: block;
+  }
+
+  .filter-dropdown p:nth-child(2){
+    display: none;
+  }
+
+  .sidebar{
+    display: none;
+  }
+
+  .products{
+    justify-content: center;
+  }
+}
