--- a/src/App.css
+++ b/src/App.css
@@ -137,10 +137,10 @@ option{
 
 .container{
   display: flex;
-  width: 95%;
+  width: 100%;
   min-height: 20rem;
   gap: 0.3rem;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .sidebar{
@@ -194,15 +194,82 @@ option{
 }
 
 .footer{
+  width: 100vw;
   background-color: black;
   color: white;
   font-family: monospace;
+  padding: 5rem 5rem 2rem 5rem;
 }
 
-@media (max-width: 768px) {
+
+.footer-1-lg{
+  display: flex;
+  justify-content:center;
+  margin: auto;
+}
+
+.footer-1-lg div:first-child{
+  width: 50%;
+}
+
+.footer-1-lg div:nth-child(2){
+  width: 50%;
+}
+
+.footer input{
+  width: 60%;
+  height: 2rem;
+}
+
+.footer button{
+  font-size: 12px;
+  width: 30%;
+  height: 2rem;
+  margin-left: 1rem;
+  border: 1.14px;
+  opacity: 0.3px;
+  background-color: #000000 ;
+  border: 1px solid #BFC8CD;
+  color: #BFC8CD;
+}
+
+.footer-2-lg{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li{
+  margin-top: 1rem;
+}
+
+.line-sm{
+  display: none;
+}
+
+@media (max-width: 800px) {
   .sidebar{
     min-width: 250px;
   }
+
+  .footer{
+    padding: 1rem;
+  }
+
+  .footer-1-lg div:first-child{
+    width: 100%;
+  }
+
+  .footer-1-lg div:nth-child(2){
+    width: 100%;
+  }
+
 }
 
 
@@ -293,5 +360,44 @@ option{
 
   .products{
     justify-content: center;
+    padding: 0;
   }
+
+  .footer{
+    padding: 0;
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+  }
+
+  .footer-1-lg{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer-1-lg div:nth-child(2){
+    margin-top: 1rem;
+  }
+
+  .footer-2-lg{
+    display: block;
+  }
+
+  .footer-2-lg div{
+    margin-top: 1rem;
+    text-align: center;
+  }
+
+  .footer-2-lg div:first-child{
+    margin-top: 0;
+  }
+
+  .line-sm{
+    display: block;
+    margin: 0 0.5rem;
+  }
+  
 }
